k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-web-app
  labels:
    app: simple-web-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-web-app
  template:
    metadata:
      labels:
        app: simple-web-app
    spec:
      containers:
      - name: simple-web-app
        image: simple-web-app:test
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
